--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   logger: ^2.0.1
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
